# ocflib

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Jenkinsfile  MANIFEST.in  Makefile  README.md  build-in-docker  constants.py  default.nix  flake.nix  lint.sh  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: build.yml  deploy.yml
account/: kerberos.py  manage.py  reserved_names.txt  search.py  validators.py
calnet/: utils.py
debian/: control  py3dist-overrides  rules
ocflib/: .constants.py.swp  constants.py
ocflib/account/: __init__.py  creation.py  manage.py  search.py  submission.py  utils.py  validators.py
ocflib/api/: keys.py  keys.sql
ocflib/calnet/: utils.py
ocflib/infra/: db.py  discourse.py  github.py  hosts.py  kanboard.py  kerberos.py  ldap.py  mysql.py  net.py  rt.py
ocflib/lab/: announcements.py  hours.py  hours2.py  last_used.py  mirrors.sql  ocfstats.sql  printing.py  staff_hours.py  stats.py
ocflib/misc/: db.py  gapps_lists.py  krb5.py  mail.py  message.py  ocfshorturls.sql  shell.py  shorturls.py  validators.py  whoami.py
ocflib/org/: meeting_hours.py
ocflib/printing/: ocfprinting.sql  printers.py  quota.py
ocflib/ucb/: cas.py  directory.py  groups.py
ocflib/vhost/: application.py  config.py  mail.py  ocfmail.sql  vhost-app.jinja  vhost-web.jinja  web.py
scripts/: release.sh
tests/: conftest.py  fixtures_test.py
tests-manual/account/: change-password-keytab  change-password-staffer  creation  misc  password-matches  queue-creation  search  submission  vhosts
tests-manual/infra/: create-krb-keytab  create-ldap-keytab  discourse  get-krb-keytab  hosts  kanboard  rt
tests-manual/lab/: print_logins.py
tests-manual/misc/: list_officers  shell  validators  whoami
tests-manual/printing/: add_job.py  add_refund.py  init_schema.py  paper.py  (+1 more)
(+52 files in other folders)
