[tool.poetry]
name = "ocflib"
version = "2026.04.10-2"
description = "libraries for account and server management"
authors = ["Open Computing Facility <help@ocf.berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
attrs = ">=22.2.0"
zxcvbn = "^4.5.0"
dnspython = "^2.1.0"
jinja2 = "^3.0.3"
ldap3 = "^2.9.1"
passlib = "^1.7.4"
pexpect = "^4.9.0"
pycryptodome = "^3.19.0"
pygithub = ">=1.56"
pymysql = "^1.0.2"
puresnmp = "^2.0.1"
pyyaml = "^6.0.1"
redis = ">=4.3.6"
requests = "^2.26.1"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
freezegun = "^1.2.2"
mock = "^5.1.0"
pre-commit = "^3.0"
pyfakefs = "^5.0"
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-xdist = "^3.0.2"
tox = "^4.0"
setuptools = "^70.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
